Closed Bug 252977 Opened 22 years ago Closed 22 years ago

nsWebBrowserFind::GetFrameSelection triggers assertion in nsFrameManager.cpp

Categories

(Core :: DOM: Selection, defect)

x86
Linux
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

Details

(Keywords: testcase)

Attachments

(3 files)

nsWebBrowserFind::GetFrameSelection triggers assertion in nsFrameManager.cpp STEPS TO REPRODUCE: 1. Load testcase in a debug build 2. Context menu: "Select All" 3. Context menu: "View Selection Source" ACTUAL RESULTS: WARNING: NS_ENSURE_TRUE(aContent) failed, file nsFrameManager.cpp, line 403 WARNING: NS_ENSURE_TRUE(aContent) failed, file nsFrameManager.cpp, line 403 The problem is that nsWebBrowserFind::GetFrameSelection assumes that focusController->GetFocusedElement returns a non-null value. There is actually no harm done in this case, but unnecessary assertions distracts from real ones, IMO.
Attached file Stack
Attached patch Patch rev. 1Splinter Review
Attachment #154274 - Flags: superreview?(bzbarsky)
Attachment #154274 - Flags: review?(bzbarsky)
Attached file Testcase
Keywords: testcase
Comment on attachment 154274 [details] [diff] [review] Patch rev. 1 r+sr=bzbarsky
Attachment #154274 - Flags: superreview?(bzbarsky)
Attachment #154274 - Flags: superreview+
Attachment #154274 - Flags: review?(bzbarsky)
Attachment #154274 - Flags: review+
Checked in 2004-08-08 10:18 PDT -> FIXED
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Summary: [FIX] nsWebBrowserFind::GetFrameSelection triggers assertion in nsFrameManager.cpp → nsWebBrowserFind::GetFrameSelection triggers assertion in nsFrameManager.cpp
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: