Check fo null before using GetFocusedElement result. b=252977 r+sr=bzbarsky